hphp/test/slow/variadic_args/by_reference.php.expectf

Fatal error: syntax error, unexpected ..., expecting T_VARIABLE in %s/variadic_args/by_reference.php on line 3
